# npp-quickreplace

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.github/workflows/: build.yml
docs/: architecture.md  planning-ko.md  release-checklist.md
packaging/: plugin-admin-x64.entry.template.json
samples/: config.json  replacements.json
scripts/: build.ps1  generate-plugin-admin-entry.ps1  install-local.ps1  sign-release.ps1  smoke-test-features.ps1  smoke-test-gui.ps1
src/: CapturePattern.cpp  CapturePattern.h  ConfigStore.cpp  ConfigStore.h  DataPackage.cpp  DataPackage.h  GroupManager.cpp  GroupManager.h  Localization.cpp  Localization.h  NppQuickReplace.rc  Plugin.cpp  RuleExchange.cpp  RuleExchange.h  RuleManager.cpp  RuleManager.h  RuleStore.cpp  RuleStore.h  RuleTester.cpp  RuleTester.h  SettingsManager.cpp  SettingsManager.h  SnippetTemplate.cpp  SnippetTemplate.h
tests/: RuleStoreTests.cpp
